// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test int component <GifGrid /> should show correctly 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test int component <GifGrid /> should show items when the images are load with the useFetchGifs hook 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Dragon Ball
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Image test"
      url="hhtps://localhost/test.png"
    />
  </div>
</Fragment>
`;
